[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
cached = "0.44.0"
clap = { version = "4.4.0", features = ["derive"] }
miette = "5.10.0"
once_cell = "1.18.0"
once_map = "0.4.8"
petgraph = "0.6.4"
relative-path = { version = "1.9.0", features = ["serde"] }
reqwest = { version = "0.11.20", default-features = false, features = [
	"rustls-tls",
] }
schematic = { version = "0.11.4", default-features = false, features = [
	"schema",
	"toml",
	"type_relative_path",
	"type_semver",
	"type_url",
	"valid_url",
] }
semver = "1.0.18"
serde = "1.0.188"
serde_json = "1.0.105"
starbase = { version = "0.2.4" }
starbase_archive = { version = "0.2.0", default-features = false }
starbase_sandbox = { version = "0.1.8" }
starbase_styles = "0.1.13"
starbase_utils = { version = "0.2.20", default-features = false, features = [
	"glob",
] }
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full", "tracing"] }
tracing = "0.1.37"
url = { version = "2.4.0", features = ["serde"] }
