[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
cached = "0.44.0"
clap = { version = "4.4.2", features = ["derive"] }
miette = "5.10.0"
once_cell = "1.18.0"
once_map = "0.4.8"
petgraph = "0.6.4"
relative-path = { version = "1.9.0", features = ["serde"] }
reqwest = { version = "0.11.20", default-features = false, features = [
	"rustls-tls",
] }
schematic = { version = "0.11.5", default-features = false, features = [
	"schema",
	"toml",
	"type_relative_path",
	"type_semver",
	"type_url",
	"valid_url",
] }
semver = "1.0.18"
serde = "1.0.188"
serde_json = "1.0.105"
starbase = { version = "0.2.5" }
starbase_archive = { version = "0.2.0", default-features = false }
starbase_sandbox = { version = "0.1.8" }
starbase_styles = "0.1.13"
starbase_utils = { version = "0.2.20", default-features = false, features = [
	"glob",
] }
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full", "tracing"] }
tracing = "0.1.37"
url = { version = "2.4.1", features = ["serde"] }

# Config for 'cargo dist'
[workspace.metadata.dist]
# Whether to consider the binaries in a package for distribution (defaults true)
dist = true
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.2.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Path that installers should place binaries in
install-path = "~/.espresso/bin"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
