[package]
name = "espresso_cli"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Next-generation JavaScript package manager."
homepage = "https://espresso.build"
repository = "https://github.com/moonrepo/espresso"
publish = false

[[bin]]
name = "espm"
path = "src/main.rs"

[dependencies]
espresso_common = { path = "../common" }
espresso_compiler = { path = "../compiler" }
espresso_lockfile = { path = "../lockfile" }
espresso_manifest = { path = "../manifest" }
espresso_package = { path = "../package" }
espresso_store = { path = "../store" }
espresso_workspace = { path = "../workspace" }
clap = { workspace = true, features = ["derive", "env", "wrap_help"] }
console = "0.15.7"
dialoguer = { version = "0.10.4", default-features = false }
miette = { workspace = true }
mimalloc = { version = "0.1.38", default-features = false }
relative-path = { workspace = true }
starbase = { workspace = true }
starbase_styles = { workspace = true }
starbase_utils = { workspace = true, features = ["toml"] }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
starbase_sandbox = { workspace = true }
