[package]
name = "espresso_common"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
clap = { workspace = true }
miette = { workspace = true }
once_cell = { workspace = true }
regex = "1.9.5"
schematic = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
spdx = "0.10.2"
thiserror = { workspace = true }
