[package]
name = "jpm_compiler_typescript"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
jpm_common = { path = "../common" }
jpm_manifest = { path = "../manifest" }
jpm_package = { path = "../package" }
jpm_store = { path = "../store" }
cached = { workspace = true }
miette = { workspace = true }
starbase_utils = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
