[package]
name = "jpm_compiler"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
jpm_common = { path = "../common" }
jpm_package = { path = "../package" }
anyhow = "1.0.72"
futures = "0.3.28"
miette = { workspace = true }
oxipng = "8.0.0"
swc = "0.264.22"
swc_core = { version = "0.79.24", features = [
	"common",
	"ecma_ast",
	"ecma_parser",
	"ecma_plugin_transform",
] }
starbase_styles = { workspace = true }
starbase_utils = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
starbase_sandbox = { workspace = true }
