[package]
name = "jpm_compiler"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
jpm_common = { path = "../common" }
jpm_manifest = { path = "../manifest" }
jpm_package = { path = "../package" }
anyhow = "1.0.72"
futures = "0.3.28"
miette = { workspace = true }
oxipng = "8.0.0"
swc = "0.264.46"
swc_core = { version = "0.79.49", default-features = false, features = [
	"common",
	"ecma_ast",
	"ecma_parser",
	"ecma_plugin_transform",
] }
swc_visit = "0.5.7"
starbase_styles = { workspace = true }
starbase_utils = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
starbase_sandbox = { workspace = true }
