[package]
name = "espresso_compiler"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
espresso_common = { path = "../common" }
espresso_manifest = { path = "../manifest" }
espresso_package = { path = "../package" }
anyhow = "1.0.74"
futures = "0.3.28"
miette = { workspace = true }
oxipng = "8.0.0"
swc = "0.264.56"
swc_core = { version = "0.79.59", default-features = false, features = [
	"common",
	"ecma_ast",
	"ecma_parser",
	"ecma_plugin_transform",
] }
swc_visit = "0.5.7"
starbase_styles = { workspace = true }
starbase_utils = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
starbase_sandbox = { workspace = true }
