[package]
name = "jpm_manifest"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
jpm_common = { path = "../common" }
miette = { workspace = true }
schematic = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
spdx = "0.10.2"
starbase_styles = { workspace = true }
starbase_utils = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
starbase_sandbox = { workspace = true }
