[package]
name = "jpm_package"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
jpm_manifest = { path = "../manifest" }
miette = { workspace = true }
relative-path = "1.8.0"
starbase_styles = { workspace = true }
starbase_utils = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
starbase_sandbox = { workspace = true }
