[package]
name = "espresso_package"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
espresso_common = { path = "../common" }
espresso_manifest = { path = "../manifest" }
miette = { workspace = true }
relative-path = { workspace = true }
schematic = { workspace = true }
starbase_styles = { workspace = true }
starbase_utils = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
starbase_sandbox = { workspace = true }
