[package]
name = "jpm_store"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
jpm_common = { path = "../common" }
miette = { workspace = true }
reqwest = { workspace = true }
starbase = { workspace = true }
starbase_archive = { workspace = true, features = ["tar-gz", "tar-xz"] }
starbase_styles = { workspace = true }
starbase_utils = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
