[package]
name = "jpm_workspace"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
jpm_lockfile = { path = "../lockfile" }
jpm_manifest = { path = "../manifest" }
miette = { workspace = true }
starbase = { workspace = true }
starbase_styles = { workspace = true }
starbase_utils = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
