[package]
name = "espresso_workspace"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
espresso_common = { path = "../common" }
espresso_lockfile = { path = "../lockfile" }
espresso_manifest = { path = "../manifest" }
espresso_package = { path = "../package" }
miette = { workspace = true }
once_cell = { workspace = true }
petgraph = { workspace = true }
starbase = { workspace = true }
starbase_styles = { workspace = true }
starbase_utils = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
starbase_sandbox = { workspace = true }
